k8s/gosveltekit-base.yaml
# Apply this manifest first to provision namespace and shared configuration.
---
apiVersion: v1
kind: Namespace
metadata:
    name: gosveltekit
